--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>1154</width>
-    <height>634</height>
+    <height>648</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>1154</width>
-    <height>634</height>
+    <height>648</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,7 @@
       <x>10</x>
       <y>0</y>
       <width>371</width>
-      <height>261</height>
+      <height>281</height>
      </rect>
     </property>
     <property name="title">
@@ -500,12 +500,76 @@
       <string>Window Pos Y</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label_MaxRenderScale">
+     <property name="geometry">
+      <rect>
+       <x>250</x>
+       <y>253</y>
+       <width>101</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Max Render Scale</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_MaxScale">
+     <property name="geometry">
+      <rect>
+       <x>65</x>
+       <y>253</y>
+       <width>111</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Max Scale</string>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="spinBox_MaxScale">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>253</y>
+       <width>51</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>99</number>
+     </property>
+     <property name="value">
+      <number>1</number>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="spinBox_MaxRenderScale">
+     <property name="geometry">
+      <rect>
+       <x>195</x>
+       <y>253</y>
+       <width>51</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>99</number>
+     </property>
+     <property name="value">
+      <number>1</number>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_Console">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>360</y>
+      <y>380</y>
       <width>191</width>
       <height>131</height>
      </rect>
@@ -607,7 +671,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>280</y>
       <width>371</width>
       <height>101</height>
      </rect>
@@ -771,7 +835,7 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>360</y>
+      <y>380</y>
       <width>171</width>
       <height>131</height>
      </rect>
@@ -959,7 +1023,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>490</y>
+      <y>510</y>
       <width>371</width>
       <height>91</height>
      </rect>
