--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1156</width>
-    <height>659</height>
+    <width>1154</width>
+    <height>713</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -68,22 +68,6 @@
      </property>
      <property name="tickInterval">
       <number>0</number>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_PopUp">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>80</y>
-       <width>131</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="layoutDirection">
-      <enum>Qt::LeftToRight</enum>
-     </property>
-     <property name="text">
-      <string>Pop-ups</string>
      </property>
     </widget>
     <widget class="QCheckBox" name="checkBox_Fullscreen">
@@ -562,6 +546,47 @@
      </property>
      <property name="value">
       <number>1</number>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="comboBox_PopUp">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>81</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <item>
+      <property name="text">
+       <string>Off</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Big</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Small</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>80</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pop-ups</string>
      </property>
     </widget>
    </widget>
@@ -1230,6 +1255,45 @@
      </property>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox_OnlineBetaSettings">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>600</y>
+      <width>371</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Online Beta</string>
+    </property>
+    <widget class="QCheckBox" name="checkBox_Steamer">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>111</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Streamer mode</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBox_JEcontrols">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>20</y>
+       <width>141</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Better brothers controls</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar">
    <property name="enabled">
@@ -1241,7 +1305,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1156</width>
+     <width>1154</width>
      <height>21</height>
     </rect>
    </property>
