--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,7 +100,7 @@
          <x>0</x>
          <y>0</y>
          <width>401</width>
-         <height>701</height>
+         <height>741</height>
         </rect>
        </property>
        <widget class="QGroupBox" name="groupBox_Effects">
@@ -583,7 +583,7 @@
           <x>10</x>
           <y>600</y>
           <width>371</width>
-          <height>101</height>
+          <height>141</height>
          </rect>
         </property>
         <property name="title">
@@ -619,7 +619,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>70</y>
+           <y>110</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -650,7 +650,7 @@
          <property name="geometry">
           <rect>
            <x>199</x>
-           <y>70</y>
+           <y>110</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -681,7 +681,7 @@
          <property name="geometry">
           <rect>
            <x>14</x>
-           <y>50</y>
+           <y>90</y>
            <width>161</width>
            <height>20</height>
           </rect>
@@ -697,7 +697,7 @@
          <property name="geometry">
           <rect>
            <x>199</x>
-           <y>50</y>
+           <y>90</y>
            <width>161</width>
            <height>20</height>
           </rect>
@@ -707,6 +707,211 @@
          </property>
          <property name="alignment">
           <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox_MultiplayerHUD">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>70</y>
+           <width>81</width>
+           <height>20</height>
+          </rect>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
+         <item>
+          <property name="text">
+           <string>Normal</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Mini</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Hearts Only</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Off</string>
+          </property>
+         </item>
+        </widget>
+        <widget class="QLabel" name="label_MultiplayerHUD">
+         <property name="geometry">
+          <rect>
+           <x>100</x>
+           <y>70</y>
+           <width>101</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Multiplayer HUD</string>
+         </property>
+        </widget>
+        <widget class="QGroupBox" name="groupBox_OnlineSettings_2">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>570</y>
+           <width>371</width>
+           <height>141</height>
+          </rect>
+         </property>
+         <property name="title">
+          <string>Co-op online</string>
+         </property>
+         <widget class="QCheckBox" name="checkBox_Steamer_3">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>20</y>
+            <width>111</width>
+            <height>22</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Streamer mode</string>
+          </property>
+         </widget>
+         <widget class="QCheckBox" name="checkBox_JEcontrols_3">
+          <property name="geometry">
+           <rect>
+            <x>160</x>
+            <y>20</y>
+            <width>151</width>
+            <height>22</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Better brothers controls</string>
+          </property>
+         </widget>
+         <widget class="QSlider" name="horizontalSlider_PlayerOpacity_3">
+          <property name="geometry">
+           <rect>
+            <x>10</x>
+            <y>110</y>
+            <width>161</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="maximum">
+           <number>10</number>
+          </property>
+          <property name="pageStep">
+           <number>1</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="invertedAppearance">
+           <bool>false</bool>
+          </property>
+          <property name="invertedControls">
+           <bool>false</bool>
+          </property>
+          <property name="tickPosition">
+           <enum>QSlider::TicksBelow</enum>
+          </property>
+          <property name="tickInterval">
+           <number>0</number>
+          </property>
+         </widget>
+         <widget class="QSlider" name="horizontalSlider_PlayersSFX_3">
+          <property name="geometry">
+           <rect>
+            <x>199</x>
+            <y>110</y>
+            <width>161</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="maximum">
+           <number>10</number>
+          </property>
+          <property name="pageStep">
+           <number>1</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="invertedAppearance">
+           <bool>false</bool>
+          </property>
+          <property name="invertedControls">
+           <bool>false</bool>
+          </property>
+          <property name="tickPosition">
+           <enum>QSlider::TicksBelow</enum>
+          </property>
+          <property name="tickInterval">
+           <number>0</number>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_PlayerOpacity_3">
+          <property name="geometry">
+           <rect>
+            <x>14</x>
+            <y>90</y>
+            <width>161</width>
+            <height>20</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Player Opacity</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_PlayersSFXVol_3">
+          <property name="geometry">
+           <rect>
+            <x>199</x>
+            <y>90</y>
+            <width>161</width>
+            <height>20</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Player Sound</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </widget>
+        <widget class="QCheckBox" name="checkBox_Chat">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>40</y>
+           <width>111</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Enable chat</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="checkBox_Chat_Filter">
+         <property name="geometry">
+          <rect>
+           <x>160</x>
+           <y>40</y>
+           <width>111</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Enable chat filter</string>
          </property>
         </widget>
        </widget>
