--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -100,14 +100,14 @@
          <x>0</x>
          <y>0</y>
          <width>401</width>
-         <height>741</height>
+         <height>771</height>
         </rect>
        </property>
        <widget class="QGroupBox" name="groupBox_Effects">
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>510</y>
+          <y>540</y>
           <width>371</width>
           <height>91</height>
          </rect>
@@ -237,7 +237,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>280</y>
+          <y>310</y>
           <width>371</width>
           <height>101</height>
          </rect>
@@ -401,7 +401,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>380</y>
+          <y>410</y>
           <width>191</width>
           <height>131</height>
          </rect>
@@ -503,7 +503,7 @@
         <property name="geometry">
          <rect>
           <x>210</x>
-          <y>380</y>
+          <y>410</y>
           <width>171</width>
           <height>131</height>
          </rect>
@@ -581,7 +581,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>600</y>
+          <y>630</y>
           <width>371</width>
           <height>141</height>
          </rect>
@@ -921,7 +921,7 @@
           <x>10</x>
           <y>0</y>
           <width>371</width>
-          <height>281</height>
+          <height>301</height>
          </rect>
         </property>
         <property name="title">
@@ -931,7 +931,7 @@
          <property name="geometry">
           <rect>
            <x>195</x>
-           <y>182</y>
+           <y>199</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -1010,7 +1010,7 @@
          <property name="geometry">
           <rect>
            <x>195</x>
-           <y>157</y>
+           <y>174</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -1058,7 +1058,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>182</y>
+           <y>199</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -1089,7 +1089,7 @@
          <property name="geometry">
           <rect>
            <x>14</x>
-           <y>157</y>
+           <y>174</y>
            <width>161</width>
            <height>21</height>
           </rect>
@@ -1248,7 +1248,7 @@
          <property name="geometry">
           <rect>
            <x>65</x>
-           <y>207</y>
+           <y>224</y>
            <width>111</width>
            <height>21</height>
           </rect>
@@ -1261,7 +1261,7 @@
          <property name="geometry">
           <rect>
            <x>65</x>
-           <y>230</y>
+           <y>247</y>
            <width>111</width>
            <height>21</height>
           </rect>
@@ -1274,7 +1274,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>207</y>
+           <y>224</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1293,7 +1293,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>230</y>
+           <y>247</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1312,7 +1312,7 @@
          <property name="geometry">
           <rect>
            <x>250</x>
-           <y>207</y>
+           <y>224</y>
            <width>101</width>
            <height>21</height>
           </rect>
@@ -1325,7 +1325,7 @@
          <property name="geometry">
           <rect>
            <x>195</x>
-           <y>207</y>
+           <y>224</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1344,7 +1344,7 @@
          <property name="geometry">
           <rect>
            <x>195</x>
-           <y>230</y>
+           <y>247</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1363,7 +1363,7 @@
          <property name="geometry">
           <rect>
            <x>250</x>
-           <y>230</y>
+           <y>247</y>
            <width>101</width>
            <height>21</height>
           </rect>
@@ -1376,7 +1376,7 @@
          <property name="geometry">
           <rect>
            <x>250</x>
-           <y>253</y>
+           <y>270</y>
            <width>101</width>
            <height>21</height>
           </rect>
@@ -1389,7 +1389,7 @@
          <property name="geometry">
           <rect>
            <x>65</x>
-           <y>253</y>
+           <y>270</y>
            <width>111</width>
            <height>21</height>
           </rect>
@@ -1402,7 +1402,7 @@
          <property name="geometry">
           <rect>
            <x>10</x>
-           <y>253</y>
+           <y>270</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1421,7 +1421,7 @@
          <property name="geometry">
           <rect>
            <x>195</x>
-           <y>253</y>
+           <y>270</y>
            <width>51</width>
            <height>25</height>
           </rect>
@@ -1475,6 +1475,69 @@
          </property>
          <property name="text">
           <string>Pop-ups</string>
+         </property>
+        </widget>
+        <widget class="QComboBox" name="comboBox_Language">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>140</y>
+           <width>131</width>
+           <height>24</height>
+          </rect>
+         </property>
+         <item>
+          <property name="text">
+           <string>English</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Japanese</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Korean</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Chinese (Simple)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Russian</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>German</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Spanish</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>French</string>
+          </property>
+         </item>
+        </widget>
+        <widget class="QLabel" name="label">
+         <property name="geometry">
+          <rect>
+           <x>150</x>
+           <y>143</y>
+           <width>61</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Language</string>
          </property>
         </widget>
        </widget>
